  systems.  Added two new configuration options, support_fifo and
  prefer_fifo_data, to the gp_*.py files to switch the new feature on
  and off.

* Removed the oldplot.py module: (1) I doubt anybody is still using
  it. (2) It seems to be broken anyway. (3) I don't have the energy to
  fix or maintain it.  Let me know if I'm wrong about point 1.


Version 1.6:

* Introduced a general mechanism to make it easy to support multiple
  gnuplot terminal types in the Gnuplot.hardcopy() function.  Added
  definitions for 'postscript', 'png', 'fig', and 'cgm'.  Other
  terminal types can now be added easily.

* Changed names of Exceptions to be more consistent with other
  modules: OptionException -> OptionError and DataException ->
  DataError.  Moved both to Errors.py and derive both from
  Errors.Error.

* Incorporated several changes for Mac OS suggested by Jon Moody.

* Added a gp_macosx.py file to support Mac OS X.  The only difference
  between this and gp_unix.py is the default terminal selection.

* Moved import statement in demo.py to global scope for Python 2.2.

* Removed claims that demo.py can be run before installing Gnuplot.py.


Version 1.5:

* Broke up the module a bit for better maintainability.  The most
  commonly-used facilities are still available through "import
  Gnuplot", but a few more specialized things have been moved to
  separate modules, in particular funcutils.py and PlotItems.py.
  __init__.py now just imports things from other modules.

* funcutils.tabulate_function() can be used to evaluate a function
  on a 1-D or 2-D grid of points (this replaces grid_function,
  which only worked with 2-D grids).

* Added two helper functions, funcutils.compute_Data and
  funcutils.compute_GridData, which compute a function's values on
  a set of points and package the results into a PlotItem.

* GridFunc is no longer an independent class; it is now a factory
  function that returns a GridData.  GridFunc is deprecated in